Fixes on smaller screens such as decreased padding of play area and reduce font size of the ending option button

--- a/docs/CSS/style.css
+++ b/docs/CSS/style.css
@@ -27,11 +27,18 @@ a {
 
 .upper-button-container > * {
     margin-right: 30px;
-    /* height: 50px; */
+}
+
+.upper-button-container > *:first-child {
+    margin-right: 0px;
 }
 
 .spacer {
     flex-grow: 1;
+}
+
+.ending-option-button-container {
+    font-size: 16px;
 }
 
 .ending-option-button-container-game-start {
@@ -166,9 +173,5 @@ a {
     font-size: 14px;
     font-weight: 400;
     margin-top: 20px;
-}
-
-.ending-option-button {
-    padding: 10px 15px;
 }
 
